--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,9 +1,11 @@
+<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>Create Event</h1>
+<h1></h1>
 
 <nav th:replace="fragments :: header"></nav>
 
