--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,3 +1,5 @@
+<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
@@ -12,7 +14,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
             integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
             crossorigin="anonymous"></script>
-
 </head>
 <body>
 
@@ -23,6 +24,8 @@
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Events</a></li>
     </ul>
 </nav>
+
+<td th:fragment="address">1234 5th Street</td>
 
 </body>
 </html>
