--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!--Teresa Tull worked on this on 10-22-2022 ch 13 work-->
+<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
