--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,4 +1,5 @@
-<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
+<!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
+<!-- 10-24-2022 work on ch 14 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -25,7 +26,7 @@
     </ul>
 </nav>
 
-<td th:fragment="address">1234 5th Street</td>
+<!-- <td th:fragment="address">1234 5th Street</td> -->
 
 </body>
 </html>
