--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
-<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
+<!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
+<!-- 10-24-2022 work on ch 14 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -7,7 +8,8 @@
 
 <h1>Coding Events</h1>
 
-<nav th:replace="fragments :: header"></nav>
+<header th:replace="fragments :: header"></header>
 
 </body>
 </html>
+
