--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,25 +1,29 @@
-<!--Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises-->
+<!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
+<!-- 10-24-2022 work on ch 14 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1></h1>
 
-<nav th:replace="fragments :: header"></nav>
+<header th:replace="fragments :: header"></header>
 
-<p th:unless="${events} and ${events.size()}">No events!</p>
+<!-- <p th:unless="${events} and ${events.size()}">No events!</p> -->
 
 <table class="table table-striped">
     <thread>
         <tr>
+            <th>ID</th>
             <th>Name</th>
+            <th>Description</th>
         </tr>
     </thread>
     <tr th:each="event : ${events}">
-        <td th:text="${event}"></td>
-        <td th:replace="fragments :: address"></td>
+        <td th:text="${event.id}"></td>
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
+        <!-- <td th:replace="fragments :: address"></td> -->
     </tr>
 </table>
 
