--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,5 +1,7 @@
 <!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
 <!-- 10-24-2022 work on ch 14 -->
+<!-- 10-30-2022 work on ch 15 -->
+<!-- 11-2-2022 work on ch 16 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -8,17 +10,44 @@
 
 <header th:replace="fragments :: header"></header>
 
+<!-- <p th:text="${errorMsg}" style="color:red;"></p>
+this is a generic mgs and below will provide specific msg -->
+
 <form method="post">
     <div class="form-group">
         <label>Name
-            <input type="text" name="eventName" class="form-control">
+            <!-- <input type="text" name="eventName" class="form-control">
+            all 3 items were the same way and changed in ch 15-->
+            <input th:field="${event.name}" class="form-control">
+            <p class="error" th:errors="${event.name}"></p>
         </label>
     </div>
+
     <div class="form-group">
-        <label>
-            <input type="text" name="eventDescription" class="form-control">
+        <label>Description
+            <input th:field="${event.description}" class="form-control">
+            <p class="error" th:errors="${event.description}"></p>
         </label>
     </div>
+
+    <div class="form-group">
+        <label>Contact Email
+            <input th:field="${event.contactEmail}" class="form-control">
+            <p class="error" th:errors="${event.contactEmail}"></p>
+        </label>
+    </div>
+
+    <div class="form-group">
+        <label>Type
+            <select th:field="${event.type}">
+                <option th:each="type : ${types}"
+                        th:value="${type}"
+                        th:text="${type.displayName}"
+                ></option>
+            </select>
+        </label>
+    </div>
+
     <div class="form-group">
         <input type="submit" value="Create Event" class="btn btn-success">
     </div>
