--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,5 +1,7 @@
 <!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
 <!-- 10-24-2022 work on ch 14 -->
+<!-- 10-30-2022 work on ch 15 -->
+<!-- 11-2-2022 work on ch 16 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
@@ -17,12 +19,16 @@
             <th>ID</th>
             <th>Name</th>
             <th>Description</th>
+            <th>Contact Email</th>
+            <th>Type</th>
         </tr>
     </thread>
     <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
+        <td th:text="${event.contactEmail}"></td>
+        <td th:text="${event.type.displayName}"></td>
         <!-- <td th:replace="fragments :: address"></td> -->
     </tr>
 </table>
