--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
 <!-- 10-24-2022 work on ch 14 -->
+<!-- 10-30-2022 work on ch 15 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
