--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -2,6 +2,7 @@
 <!-- 10-24-2022 work on ch 14 -->
 <!-- 10-30-2022 work on ch 15 -->
 <!-- 11-2-2022 work on ch 16 -->
+<!-- 11-13-2022 work on ch 17 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
