--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,6 +1,7 @@
 <!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
 <!-- 10-24-2022 work on ch 14 -->
 <!-- 10-30-2022 work on ch 15 -->
+<!-- 11-13-2022 work on ch 17 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -26,6 +27,8 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="/events/delete">All Categories</a></li>
+        <li class="nav-item"><a class="nav-link" href="/events/delete">Create Category</a></li>
     </ul>
 </nav>
 
