--- a/src/main/resources/templates/events/delete.html
+++ b/src/main/resources/templates/events/delete.html
@@ -1,4 +1,5 @@
 <!-- 10-30-2022 work on ch 15 -->
+<!-- 11-13-2022 work on ch 17 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
