--- a/src/main/resources/templates/eventCategories/index.html
+++ b/src/main/resources/templates/eventCategories/index.html
@@ -1,4 +1,4 @@
-<!-- 11-13-2022 work on ch 17 and exercise -->
+<!-- 11-19-2022 work on ch 17 exercise and studio -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
