--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -2,7 +2,7 @@
 <!-- 10-24-2022 work on ch 14 -->
 <!-- 10-30-2022 work on ch 15 -->
 <!-- 11-2-2022 work on ch 16 -->
-<!-- 11-13-2022 work on ch 17 -->
+<!-- 11-13-2022 work on ch 17 plus exercise and studio -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -11,14 +11,9 @@
 
 <header th:replace="fragments :: header"></header>
 
-<!-- <p th:text="${errorMsg}" style="color:red;"></p>
-this is a generic mgs and below will provide specific msg -->
-
 <form method="post">
     <div class="form-group">
         <label>Name
-            <!-- <input type="text" name="eventName" class="form-control">
-            all 3 items were the same way and changed in ch 15-->
             <input th:field="${event.name}" class="form-control">
         </label>
         <p class="error" th:errors="${event.name}"></p>
@@ -50,7 +45,7 @@ this is a generic mgs and below will provide specific msg -->
     </div>
 
     <div class="form-group">
-        <input type="submit" value="Create Event" class="btn btn-success">
+        <input type="submit" value="Create" class="btn btn-success">
     </div>
 </form>
 </body>
