--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,7 +1,7 @@
 <!-- Teresa Tull worked on this on 10-22-2022 ch 13 work and exercises -->
 <!-- 10-24-2022 work on ch 14 -->
 <!-- 10-30-2022 work on ch 15 -->
-<!-- 11-13-2022 work on ch 17 -->
+<!-- 11-13-2022 work on ch 17 plus exercise and studio -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
@@ -9,9 +9,6 @@
     <meta charset="UTF-8"/>
     <title>Coding Events</title>
 
-    <!--    <script th:src="@{/script.js}"></script>-->
-    <!--    <link th:href="@{/styles.css}" rel="stylesheet">-->
-    <!-- below is for ch 13.9 bootstrap (above was for 13.8) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
@@ -27,12 +24,10 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Events</a></li>
-        <li class="nav-item"><a class="nav-link" href="/events/delete">All Categories</a></li>
-        <li class="nav-item"><a class="nav-link" href="/events/delete">Create Category</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
     </ul>
 </nav>
-
-<!-- <td th:fragment="address">1234 5th Street</td> -->
 
 </body>
 </html>
