--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -3,6 +3,7 @@
 <!-- 10-30-2022 work on ch 15 -->
 <!-- 11-2-2022 work on ch 16 -->
 <!-- 11-13-2022 work on ch 17 plus exercise and studio -->
+<!-- 11-20-2022 work on ch 18 -->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
@@ -15,19 +16,11 @@
 <table class="table table-striped">
     <thread>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Contact Email</th>
-            <th>Type</th>
+            <th>Event Name</th>
         </tr>
     </thread>
     <tr th:each="event : ${events}">
-        <td th:text="${event.id}"></td>
-        <td th:text="${event.name}"></td>
-        <td th:text="${event.description}"></td>
-        <td th:text="${event.contactEmail}"></td>
-        <td th:text="${event.type.displayName}"></td>
+        <td><a th:href="'/events/detail?eventId=' + ${event.id}" th:text="${event.name}"></a></td>
     </tr>
 </table>
 
